# shadow-manipulation-lab

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .release-please-manifest.json  .release-please-manifest.json.orig  CHANGELOG.md  LICENSE  README.md  __init__.py  deno.jsonc  dictionary.txt  package-lock.json  package.json  pyproject.toml  release-please-config.json  renovate.json  renovate.json5  whitelist.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  renovate.json5
.github/workflows/: dependabot-auto-merge.yml  lint.yml  release-please.yml  test.yml
scripts/: format.bat  format.sh  lint.bat  lint.sh  release.sh  shadow_manipulation_lab_restart.bat  shadow_manipulation_lab_restart.sh  shadow_manipulation_lab_restart2.bat
shadow_manipulation_lab/: __init__.py  bbb.py  blender_manifest.toml  ccc.py  registration.py
shadow_manipulation_lab/development_support/: restart.py  restart.sh
src/shadow_manipulation_lab/: __init__.py  blender_manifest.toml  registration.py
src/shadow_manipulation_lab/development_support/: restart.py
tools/: build_extension.sh  devcontainer_fixup_workspace_files.py  devcontainer_update_content_command.sh  format.bat  lint.bat  lint.sh  release.sh
windows_sandbox/: blender-3.6.2.wsb
