[tool.poetry]
name = "shadow-manipulation-lab"
version = "1.0.0" # Dummy version. See __init__.bl_info["version"] instead.
description = ""
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"fake-bpy-module-2.93" = "20210701"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-no-pep420 = "*"
flake8-scream = "*"
flake8-simplify = "*"
flake8-spellcheck = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pylint = "*"

[tool.black]
target-version = ['py39']

[tool.mypy]
python_version = 3.9
strict = true

[[tool.mypy.overrides]]
module = [
    "bgl",
    "bmesh.*",
    "bpy.*",
    "bpy_extras.*",
    "gpu",
    "gpu_extras.*",
    "mathutils",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"

reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportMissingTypeStubs = false
reportOptionalContextManager = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryComparison = false
reportUnnecessaryContains = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
