[tool.poetry]
name = "shadow-manipulation-lab"
version = "0.7.0" # Dummy version. See __init__.bl_info["version"] instead.
description = ""
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
bpy = "3.6.*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-no-pep420 = "*"
flake8-scream = "*"
flake8-simplify = "*"
flake8-spellcheck = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pylint = "*"
pyright = "*"

[tool.black]
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"

[tool.pylint.design]
min-public-methods = 1

[tool.pylint.format]
max-line-length = 120 # https://wiki.blender.org/wiki/Process/Addons/Guidelines

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "fixme",
    "import-error",
    "import-outside-toplevel",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingModuleSource = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
